# vinsrobot

./: README.md
config/: control_setting.yaml  euroc.yaml  orb_setting_320.yaml  orb_setting_640.yaml  sensor_setting.yaml  top_setting.yaml
include/: Converter.h  Frame.h  KeyFrame.h  LocalMapping.h  LoopClosing.h  Map.h  MapPoint.h  System.h  Tracking.h
modelx/: CMakeLists.txt  CMakeLists.txt.autosave  package.xml
modelx/src/: mapping.cpp  ros_mono_vio.cpp  ros_stereo.cc  ros_vio.cc  stereo_noros_vio.cc
modelx/src/MsgSync/: MsgSynchronizer.cpp  MsgSynchronizer.h
src/: Frame.cc  ORBmatcher.cc  PnPsolver.cc  System.cc  Tracking.cc  Viewer.cc
src/IMU/: configparam.cpp  configparam.h
