<?xml version="1.0"?>
<package>
  <name>modelx</name>
  <version>0.0.0</version>
  <description>The modelx package</description>
  <maintainer email="michaelczhou@gmail.com">zhouchang</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>nodelet</build_depend>
  <run_depend>nodelet</run_depend>




  <export>

  </export>
</package>
